update URL generation for post java 20